use minimal jre instead